# helengine-vita

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  platform-plugin.json
builder/: IPsVitaNativeBuildExecutor.cs  IPsVitaPlatformCookSourceProcessor.cs  Program.cs  PsVitaCompiledShader.cs  PsVitaCompiledShaderMaterialAsset.cs  PsVitaCompiledShaderMaterialBinarySerializer.cs  PsVitaGeneratedRuntimeComponentSupportWriter.cs  PsVitaNativeBuildExecutor.cs  PsVitaPackedModelAsset.cs  PsVitaPackedModelAssetBinarySerializer.cs  PsVitaPackedModelSubmesh.cs  PsVitaPlatformAssetBuilder.cs  PsVitaPlatformCookSourceProcessor.cs  PsVitaPlatformDefinitionFactory.cs  PsVitaPlatformPluginManifest.cs  PsVitaShaderBackend.cs  PsVitaShaderBackendRegistration.cs  PsVitaShaderCompiler.cs  PsVitaTextureCookSettingsSerializer.cs  helengine.psvita.builder.csproj
builder.tests/: PsVitaBootHostSourceAuditTests.cs  PsVitaCMakeSourceAuditTests.cs  PsVitaCompiledShaderMaterialSourceAuditTests.cs  PsVitaGeneratedCoreCompatibilitySourceAuditTests.cs  PsVitaGxmRenderPipelineSourceAuditTests.cs  PsVitaGxmSolidColorProgramSourceAuditTests.cs  PsVitaInputBackendSourceAuditTests.cs  PsVitaPlatformAssetBuilderTests.cs  PsVitaPlatformPluginManifestTests.cs  PsVitaRenderManager2DSourceAuditTests.cs  PsVitaRenderManager3DSourceAuditTests.cs  PsVitaRepositoryPathResolver.cs  PsVitaRepositoryRootSourceAuditTests.cs  PsVitaShaderBackendTests.cs  PsVitaTextureCacheSourceAuditTests.cs  RecordingDiagnosticReporter.cs  RecordingProgressReporter.cs  RecordingPsVitaNativeBuildExecutor.cs  Vita3KLauncherScriptAuditTests.cs  helengine.psvita.builder.tests.csproj
docs/: PS Vita Design Docs.md  PS Vita Rendering Docs.md
docs/superpowers/plans/: 2026-05-01-helengine-sony-psvita-bootstrap.md  2026-06-05-psvita-gxm-2d-renderer.md  2026-06-05-psvita-rounded-rect-menu.md  2026-06-06-psvita-input.md  2026-06-06-vita3k-launcher.md  2026-06-07-cube-test-camera-origin-five.md  2026-06-07-cube-test-ui-scene-contract.md  2026-06-07-psvita-camera-parity.md  2026-06-07-psvita-white-cube-rendering.md  2026-06-07-vita3k-relaunch.md  2026-06-08-psvita-shared-solid-color-shader-pipeline.md  2026-06-08-psvita-solid-color-shader.md  2026-06-30-psvita-lambert-fallback.md  2026-07-20-psvita-colored-cube-material-colors.md  2026-07-21-psvita-gpu-forward-lambert.md  2026-07-21-psvita-shader-artifact-pipeline.md
docs/superpowers/specs/: 2026-05-01-helengine-sony-psvita-bootstrap-design.md  2026-06-05-psvita-gxm-2d-renderer-design.md  2026-06-05-psvita-rounded-rect-menu-design.md  2026-06-06-psvita-input-design.md  2026-06-06-vita3k-launcher-design.md  2026-06-07-cube-test-camera-origin-five-design.md  2026-06-07-cube-test-ui-scene-contract-design.md  2026-06-07-psvita-camera-parity-design.md  2026-06-07-psvita-white-cube-rendering-design.md  2026-06-07-vita3k-relaunch-design.md  2026-06-08-psvita-solid-color-shader-design.md  2026-06-30-psvita-lambert-fallback-design.md  2026-07-20-psvita-colored-cube-material-colors-design.md  2026-07-21-psvita-gpu-forward-lambert-design.md  2026-07-21-psvita-shader-artifact-pipeline-design.md
src/: GeneratedRuntimeComponentDeserializerRegistration.hpp  main.cpp
src/platform/psvita/: PsVitaBootHost.cpp  PsVitaBootHost.hpp  PsVitaGeneratedCoreCompatibility.hpp  PsVitaInputBackend.cpp  PsVitaInputBackend.hpp  PsVitaRuntimeDiagnosticsProvider.cpp  PsVitaRuntimeDiagnosticsProvider.hpp  PsVitaRuntimeSceneCatalogFactory.cpp  PsVitaRuntimeSceneCatalogFactory.hpp
src/platform/psvita/audio/: PsVitaAudioBackend.cpp  PsVitaAudioBackend.hpp
src/platform/psvita/rendering/: PsVitaCompiledShaderMaterialReader.cpp  PsVitaCompiledShaderMaterialReader.hpp  PsVitaCompiledShaderRuntimeMaterial.cpp  PsVitaCompiledShaderRuntimeMaterial.hpp  PsVitaGpuTexture.cpp  PsVitaGpuTexture.hpp  PsVitaGxmRenderer.cpp  PsVitaGxmRenderer.hpp  PsVitaGxmSolidColorProgram.cpp  PsVitaGxmSolidColorProgram.hpp  PsVitaMaterialColorDecoder.cpp  PsVitaMaterialColorDecoder.hpp  PsVitaPackedModelReader.cpp  PsVitaPackedModelReader.hpp  PsVitaQueuedQuad.hpp  PsVitaRenderManager2D.cpp  PsVitaRenderManager2D.hpp  PsVitaRenderManager3D.cpp  PsVitaRenderManager3D.hpp  PsVitaRuntimeModel.cpp  PsVitaRuntimeModel.hpp  PsVitaRuntimeSubmesh.cpp  PsVitaRuntimeSubmesh.hpp  PsVitaRuntimeTexture.cpp  PsVitaRuntimeTexture.hpp  PsVitaSolidColorVertex.hpp  PsVitaTextureCache.cpp  PsVitaTextureCache.hpp  PsVitaTexturedQuadVertex.hpp
tools/: launch-vita3k.ps1
